# CrewLearning

./: .gitignore  README.md  course.json  elearning.json  extract.md  pyproject.toml  report.md  slides.json
src/course_builder/: crew.py  debug.py  main.py
src/course_builder/config/: agents.yaml  tasks.yaml
src/course_builder/output/: SlideModel.py
src/course_builder/tools/: create_elearning_tool.py  pdf_reader_tool.py
