[project]
name = "course_builder"
version = "0.1.0"
description = "course_builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "pymupdf>=1.25.5",
    "pysimplegui>=5.0.8.3",
]

[project.scripts]
course_builder = "course_builder.main:run"
run_crew = "course_builder.main:run"
train = "course_builder.main:train"
replay = "course_builder.main:replay"
test = "course_builder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
